# cellular_automata_pon

./: CMakeLists.txt  Makefile  README.md  cellular_automata  cmake_install.cmake
include/: cell.hpp  global_includes.hpp  sensor.hpp
output_data/: NOP_640Cells_10000Steps_110Rule_Deterministic_LoopedBorder.csv  NOP_640Cells_10000Steps_110Rule_Randomized_LoopedBorder.csv  NOP_640Cells_10000Steps_184Rule_Deterministic_LoopedBorder.csv  NOP_640Cells_10000Steps_184Rule_Randomized_LoopedBorder.csv  NOP_640Cells_10000Steps_250Rule_Deterministic_LoopedBorder.csv  NOP_640Cells_10000Steps_250Rule_Randomized_LoopedBorder.csv  NOP_640Cells_10000Steps_254Rule_Deterministic_LoopedBorder.csv  NOP_640Cells_10000Steps_254Rule_Randomized_LoopedBorder.csv  NOP_640Cells_10000Steps_30Rule_Deterministic_LoopedBorder.csv  NOP_640Cells_10000Steps_30Rule_Randomized_LoopedBorder.csv  NOP_640Cells_10000Steps_90Rule_Deterministic_LoopedBorder.csv  NOP_640Cells_10000Steps_90Rule_Randomized_LoopedBorder.csv  NOP_64Cells_10000Steps_110Rule_Deterministic_LoopedBorder.csv  NOP_64Cells_10000Steps_110Rule_Randomized_LoopedBorder.csv  NOP_64Cells_10000Steps_184Rule_Deterministic_LoopedBorder.csv  NOP_64Cells_10000Steps_184Rule_Randomized_LoopedBorder.csv  NOP_64Cells_10000Steps_250Rule_Deterministic_LoopedBorder.csv  NOP_64Cells_10000Steps_250Rule_Randomized_LoopedBorder.csv  NOP_64Cells_10000Steps_254Rule_Deterministic_LoopedBorder.csv  NOP_64Cells_10000Steps_254Rule_Randomized_LoopedBorder.csv  NOP_64Cells_10000Steps_30Rule_Deterministic_LoopedBorder.csv  (+24 more)
src/: main.cpp
